force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attachment Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>