force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__CSSClasses__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CSSClasses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSSClasses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>