force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__CustomURL__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CustomURL__c</fullName>
    <description>An external or internal link to a customized page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the URL to where you want to redirect. The link must be of the form http://www.domain.com.</inlineHelpText>
    <label>Custom URL</label>
    <type>Url</type>
</CustomField>