force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>A description of this menu, for your use only.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a description for this menu (only visible from the back end).</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>