force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Home__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will make this the home page of the members&apos; portal.</description>
    <inlineHelpText>Check this option for making this the Home page.</inlineHelpText>
    <label>Home</label>
    <type>Checkbox</type>
</CustomField>