force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Image__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloEE__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>