force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__RedemptionRule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is being used to determine if a Menu has segments. When this lookup is null, it doesn&apos;t have any Segment Domain.</description>
    <inlineHelpText>Check this box in order to activate this content feed.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipLabel>Menu</relationshipLabel>
    <relationshipName>Menu</relationshipName>
    <type>Lookup</type>
</CustomField>