force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__SEODescription__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SEODescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SEO Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>