force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__SEOKeywords__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SEOKeywords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SEO Keywords</label>
    <type>TextArea</type>
</CustomField>